# fixing-a-hole

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml  version.yaml
fixingahole/: __init__.py  config.py
fixingahole/cli/: __init__.py  main.py
fixingahole/profiler/: __init__.py  profile_json_parser.py  profile_parser.py  profile_summary.py  profiler.py  profiler_config.py  scalene_json_parser.py  stack_reporter.py  stats_manager.py  utils.py
tests/: __init__.py  conftest.py  test_utils.py
tests/scripts/: advanced.py  advanced_profile_results.json  advanced_profile_results.txt  basic.py  with_argparse.py
tests/test_cli/: test_cli.py
tests/test_init/: test_init.py
tests/test_profiler/: test_profile_json_parser.py  test_profile_parser.py  test_profile_summary.py  test_profiler.py  test_run_profiler.py  test_scalene_json_parser.py  test_stack_reporter.py  test_stats_manager.py
