[project]
name = "FixingAHole"
version = "0.1.0"
description = "Integrating Scalene into Python projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colours",
    "scalene",
    "sympy>=1.14.0",
    "typer>=0.20.0",
]

[project.scripts]
fixit = "fixingahole.cli.main:app"

[tool.uv.sources]
scalene = [
    # Python 3.10
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp310-cp310-macosx_15_0_universal2.whl", marker = "python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp310-cp310-macosx_13_0_universal2.whl", marker = "python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.10' and sys_platform == 'linux'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp310-cp310-win_amd64.whl", marker = "python_version == '3.10' and sys_platform == 'win32'" },
    # Python 3.11
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp311-cp311-macosx_15_0_universal2.whl", marker = "python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp311-cp311-macosx_13_0_universal2.whl", marker = "python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.11' and sys_platform == 'linux'" },
    { git = "https://github.com/zyrxvo/scalene.git", rev = "v1.5.55", marker = "python_version == '3.11' and sys_platform == 'win32'" },
    # Python 3.12
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp312-cp312-macosx_15_0_universal2.whl", marker = "python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp312-cp312-macosx_13_0_universal2.whl", marker = "python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55/scalene-1.5.55-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.12' and sys_platform == 'linux'" },
    { git = "https://github.com/zyrxvo/scalene.git", rev = "v1.5.55", marker = "python_version == '3.11' and sys_platform == 'win32'" },
]
colours = { git = "https://github.com/XanaduAI/colours.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixingahole"]