[project]
name = "FixingAHole"
version = "0.1.1"
description = "Integrating Scalene into Python projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colours",
    "scalene",
    "sympy>=1.14.0",
    "typer>=0.20.0",
]

[project.scripts]
fixingahole = "fixingahole.cli.main:app"

[tool.uv.sources]
colours = { git = "https://github.com/XanaduAI/colours.git", branch = "main"}
scalene = [
    # Python 3.11
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp311-cp311-macosx_15_0_universal2.whl", marker = "python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp311-cp311-macosx_13_0_universal2.whl", marker = "python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.11' and sys_platform == 'linux'" },
    { git = "https://github.com/zyrxvo/scalene.git", rev = "v1.5.55b", marker = "python_version == '3.11' and sys_platform == 'win32'" },
    # Python 3.12
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp312-cp312-macosx_15_0_universal2.whl", marker = "python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp312-cp312-macosx_13_0_universal2.whl", marker = "python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.12' and sys_platform == 'linux'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp312-cp312-win_amd64.whl", marker = "python_version == '3.12' and sys_platform == 'win32'" },
    # Python 3.13
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp313-cp313-macosx_15_0_universal2.whl", marker = "python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp313-cp313-macosx_13_0_universal2.whl", marker = "python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.13' and sys_platform == 'linux'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp313-cp313-win_amd64.whl", marker = "python_version == '3.13' and sys_platform == 'win32'" },
    # Python 3.14
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp314-cp314-macosx_15_0_universal2.whl", marker = "python_version == '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp314-cp314-macosx_13_0_universal2.whl", marker = "python_version == '3.14' and sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp314-cp314-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl", marker = "python_version == '3.14' and sys_platform == 'linux'" },
    { url = "https://github.com/zyrxvo/scalene/releases/download/v1.5.55b/scalene-1.5.55-cp314-cp314-win_amd64.whl", marker = "python_version == '3.14' and sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov >=5.0.0, <6.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --ignore=performance/"

[tool.ruff]
line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FAST",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "D107",
    "D203",
    "D213",
    "S404",
    "S311",
    "S603",
]

[tool.ruff.lint.pylint]
max-locals = 20
max-args = 10

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "INP001"]
"tests/test_init/*" = ["SLF001"]
"tests/**/test_*.py" = ["ANN201", "S101", "PLR6301"]

[tool.fixingahole]
root = "." # default to root directory as the current working directory
output = "performance/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixingahole"]