[project]
name = "FixingAHole"
version = "0.2.0"
description = "Integrating Scalene into Python projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colours",
    "scalene>=2.0.1",
    "sympy>=1.14.0",
    "typer>=0.20.0",
    "watchdog>=6.0.0",
]

[project.scripts]
fixingahole = "fixingahole.cli.main:app"

[tool.uv.sources]
colours = { git = "https://github.com/XanaduAI/colours.git", rev = "61c77e904fe0f0479043138ce14c5ba730d9d2c0" }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov >=5.0.0, <6.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --ignore=performance/"

[tool.ruff]
line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FAST",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "D107",
    "D203",
    "D213",
    "S404",
    "S311",
    "S603",
]

[tool.ruff.lint.pylint]
max-locals = 20
max-args = 10

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "INP001", "PLR2004"]
"tests/test_init/*" = ["SLF001"]
"tests/**/test_*.py" = ["ANN201", "S101", "PLR6301"]

[tool.fixingahole]
root = "." # default to root directory as the current working directory
output = "performance/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixingahole"]
